--- a/langs/assemblyscript/package.json
+++ b/langs/assemblyscript/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests",
-    "build": "npm run asbuild:optimized && xxd -i build/optimized.wasm > ../source/app.wasm.h",
+    "build": "npm run asbuild:optimized",
     "asbuild:untouched": "asc assembly/index.ts --target debug",
     "asbuild:optimized": "asc assembly/index.ts -O3z --runtime stub --noAssert --use abort=",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized"
