--- a/langs/rust/crates/wasm_experiment/Cargo.toml
+++ b/langs/rust/crates/wasm_experiment/Cargo.toml
@@ -3,3 +3,11 @@ name = "wasm_experiment"
 version = "0.1.0"
 edition = "2024"
 
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
+[dependencies]
+
