Fix wasmcarts-buildtool, rust text formatting
Rust text formatting is extremely experimental and subject to crashes.
But it sorta works, and has a nice little macro.

--- a/langs/rust/crates/wasm_experiment/Cargo.toml
+++ b/langs/rust/crates/wasm_experiment/Cargo.toml
@@ -3,9 +3,15 @@ name = "wasm_experiment"
 version = "0.1.0"
 edition = "2024"
 
+[dependencies]
+ufmt = "0.2.0"
+
 [profile.dev]
 panic = "abort"
 
 [profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
 panic = "abort"
 
